# virtual-person

./: .gitignore  CLI_TRAINING_GUIDE.md  HANDOFF.md  README.md  TRAINING_GUIDE.md  pyproject.toml  run_trainer.bat  run_trainer.ps1  run_trainer_cli.bat  run_trainer_cli.ps1
data/: sample_dictionary.jsonl
examples/: custom_agent.py  dump_snapshot.py  inspect_drive_neurons.py  live_preview.py  real_world_mock.py  run_spiking_agent.py  train_spiking_mind.py
mind_training/: README_FIRST.txt  eval_suite.json  run_eval_suite.py  sample_snapshot.json  snapshot_viewer.html  stage3_eval_report.json  stage3_eval_report_v2.json  stage3_eval_report_v3.json  trainer_project.json
mind_training/checkpoints/: stage1_language.pt  stage1_language.run.json  stage2_practical.pt  stage2_practical.run.json  stage3_autonomous.pt  stage3_autonomous.run.json
mind_training/corpora/: bootstrap_behavior.jsonl  sample_dictionary_dictionary.jsonl
mind_training/handoff/: HANDOFF.md  state.json
mind_training/logs/: curriculum_summary.json  stage1_language_training.jsonl  stage2_practical_training.jsonl  stage3_autonomous_training.jsonl
src/virtual_person/: __init__.py  agent.py  body.py  bootstrap_data.py  cli.py  computer.py  drives.py  economy.py  env.py  interoception.py  memory.py  planner.py  real_world.py  renderer.py  runtime_ui.py  simulation.py  skills.py  spike_tokenizer.py  spiking.py  (+11 more)
tests/: test_economy.py  test_real_world.py  test_renderer.py  test_runtime_ui.py  test_simulation.py  test_spiking.py  test_trainer.py  test_trainer_cli.py  test_vm_runtime.py  test_vp_package.py
(+24 files in other folders)
