[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "virtual-person-ai"
version = "0.5.0"
description = "A Python-native embodied virtual-person simulation and training scaffold."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "OpenAI"}]
dependencies = ["torch>=2.2"]

[project.scripts]
virtual-person = "virtual_person.cli:main"
virtual-person-trainer = "virtual_person.trainer_cli:main"
virtual-person-trainer-ui = "virtual_person.trainer_ui:main"
virtual-person-runtime = "virtual_person.runtime_ui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
